@@ -1,3 +1,11 @@
+2017-01-31  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Provide a GenEvent::beams() method, returning a vector, for HepMC3 compatibility.
+
+	* Add a GenParticle::id() forward-compatibility alias for barcode().
+
+	* Change new GenVertex parents and children methods to no-arg particles_in, _out methods to match HepMC3.
+
 2017-01-23  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Change forward Gen{Event,Particle,Vertex}Ptr typedefs to
